fix: make z-index uniform
set z-index as 0 for all cards

--- a/codebase/src/style.module.css
+++ b/codebase/src/style.module.css
@@ -32,6 +32,10 @@
 	}
 }
 
+.card {
+	z-index: 0;
+}
+
 body {
 	overflow-x: hidden;
 }
